# battery

./: .gitignore  README.md  pyproject.toml  strategy.md
01_분석보고서_및_사양/: 2026-04-20_M스코프_backend_design.md  2026-04-20_M스코프_backend_plan.md  2026-04-20_SOC_SOH_통합추정_Spec_v1.md  2026-04-20_오늘의_Action_List.md  2026-04-23_Antigravity_TODO_v1.md  2026-04-23_Codex_Antigravity_분업_Spec_v1.md  2026-04-23_Codex_TODO_v1.md  2026-04-23_Multi_Paper_전략_v3.md  2026-04-23_SCI논문_전략_v2.md  2026-04-23_battery_dataset_inventory_report.md  2026-04-23_battery_dataset_inventory_summary.csv  BRIEFING_for_new_chat.md  SOC_SOH_통합추정_전략_및_인사이트.md  배터리_데이터_분석_보고서.md
01_분석보고서_및_사양/K1_paper_draft/: README.md  build_paper.js
01_분석보고서_및_사양/github_push/: HOW_TO_USE.md  KCI1_strategy.md  SCI1_strategy.md  SCI3_strategy.md  main_README.md  push_all.ps1  push_stage1.ps1  push_stage1_v2.ps1  push_workspace.ps1
01_분석보고서_및_사양/kickoff/: STAGE_0_Antigravity_kickoff.md  STAGE_0_Codex_followup.md  STAGE_0_Codex_github_push.md  STAGE_0_Codex_inventory_fix.md  STAGE_0_Codex_kickoff.md  STAGE_1_Antigravity_kickoff.md  STAGE_1_Codex_github_push.md  STAGE_1_Codex_kickoff.md  STAGE_PLAN.md
01_분석보고서_및_사양/portable/: portable_README.md  portable_setup.ps1  portable_setup.py
01_분석보고서_및_사양/ppt_build/: README.md  build_ppt.js  package-lock.json
algo/: __init__.py  schemas.py
algo/ecm/: __init__.py  ecm_2rc.py  ecm_identify.py  fractional_ecm.py
algo/estimators/: __init__.py
outputs/: catalog_kier_v0.csv  catalog_summary_v0.md  handoff_stage0_codex.md  handoff_stage0_github_push.md  recon_2026-04-23.md
(+32 files in other folders)
