[project]
name = "battery-soc-soh"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "pyarrow>=15",
  "matplotlib>=3.8",
  "filterpy>=1.4.5",
  "scikit-learn>=1.4",
  "torch>=2.3",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
ui  = ["streamlit>=1.32", "plotly>=5.20", "altair>=5"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]
paper = ["seaborn>=0.13"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["algo*", "ui*"]
